src/test/ui/type-inference/or_else-multiple-type-params.stderr
error[E0282]: type annotations needed
  --> $DIR/or_else-multiple-type-params.rs:7:10
   |
LL |         .or_else(|err| {
   |          ^^^^^^^ cannot infer type for type parameter `F` declared on the associated function `or_else`
   |
help: consider specifying the type arguments in the method call
   |
LL |         .or_else::<F, O>(|err| {
   |                 ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
